[gd_scene load_steps=6 format=3 uid="uid://ynb3auwdpkbg"]

[ext_resource type="Script" path="res://file_drawer.gd" id="1_ph3v4"]
[ext_resource type="PackedScene" uid="uid://cltx5fp481ky1" path="res://models/FilingCabinetSingle_Case.fbx" id="1_yy407"]
[ext_resource type="PackedScene" uid="uid://byut4hlx0mg1q" path="res://models/FilingCabinet_Drawer.fbx" id="2_kram7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_li1ol"]
size = Vector3(0.364075, 0.367828, 0.551331)

[sub_resource type="BoxShape3D" id="BoxShape3D_mebuk"]
size = Vector3(0.318115, 0.337219, 0.393555)

[node name="FileDrawer" type="Node3D"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
script = ExtResource("1_ph3v4")

[node name="FilingCabinetSingle_Case" parent="." instance=ExtResource("1_yy407")]

[node name="FilingCabinet_Drawer" parent="." instance=ExtResource("2_kram7")]

[node name="Interaction" type="StaticBody3D" parent="." groups=["Drawer"]]
collision_layer = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000518799, 0.193588, -0.0968323)
shape = SubResource("BoxShape3D_li1ol")

[node name="OpenCollisionShape" type="CollisionShape3D" parent="Interaction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.193573, 0.365415)
shape = SubResource("BoxShape3D_mebuk")
disabled = true

[node name="ClosedMarker" type="Marker3D" parent="."]

[node name="OpenMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.4)
